[package]
name = "cbor-nemo157-com"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cbor-diag = "0.1.4"
lazy_static = "1.4.0"
serde_json = "1.0.44"
log = "0.4.8"
url = "2.1.0"

[dependencies.serde]
version = "1.0.102"
features = ["derive"]

[dependencies.strum]
version = "0.16.0"
features = ["derive"]

[dependencies.wasm-bindgen]
version = "0.2.54"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.32"
features = [
    "CssStyleDeclaration",
    "Document",
    "DomTokenList",
    "Element",
    "EventTarget",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "Location",
    "Node",
    "Storage",
    "Window",
]
